Continued working on chat functions
